# green_bier_sports_nba_model

./: .coverage.JB-Dell.12204.XvPqIVlx  .coveragerc  .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  1H_TOTAL_ANALYSIS.md  ACTIONS_COMPLETED_20260115.md  ALL_4_MARKETS_COMPARISON.md  ALL_MARKETS_BACKTEST_RESULTS.md  ARCHITECTURE_FLOW_AND_ENDPOINTS.md  AZURE_CONFIG.md  AZURE_DEPLOYMENT_ROOT_CAUSE_ANALYSIS.md  AZURE_STARTUP_VERIFICATION.md  CHANGELOG.md  CHANGELOG_v33.1.0.md  CLEANUP_COMPLETE.md  COMPLETE_OPTIMIZATION_SUMMARY.md  COMPREHENSIVE_PROJECT_REVIEW.md  CONTRIBUTING.md  DAILY_WORKFLOW.md  DATA_CONSOLIDATION_REPORT.md  DATA_SOURCE_CLARIFICATION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY_v33.1.0.md  DEPLOYMENT_SUMMARY_v33.0.20.0.md  DEPLOYMENT_SUMMARY_v33.0.21.0.md  DEPRECATED_FILES_REMOVED.md  DOCKER_SECRETS_IMPLEMENTATION.md  DYNAMIC_RETRAINING_PLAN.md  Dockerfile  Dockerfile.backtest  Dockerfile.combined  ENVIRONMENT_SETUP_STATUS.md  EXPORT_INSTRUCTIONS.md  FINAL_STATUS_v33.0.21.0.md  FIRST_HALF_VALIDATION_RESULTS.md  FIXES_APPLIED_v33.1.0.md  (+84 more)
.azure/: architecture.copilotmd  plan.copilotmd
.devcontainer/: README.md  devcontainer.json  post-create.sh
.githooks/: post-push
.github/: copilot-instructions.md
DEPRECATED_azure/: README.md
DEPRECATED_docker-compose/: README.md
NCAAF_main/: .env  .env.example  .env.production.example  README_DEV.md
archive/: README.md
azure/: CHECK_STATUS.ps1  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_WITH_DEPS.ps1  QUICK_DEPLOY.ps1  SET_API_KEYS.ps1  deploy.ps1  (+2 more)
(+2609 files in other folders)
